<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2B3139">

    <LinearLayout
        style="@style/match_wrap_margin_distance_bg"
        android:orientation="vertical"
        android:layout_marginTop="65dp">
        <EditText
            android:id="@+id/edtMobile"
            style="@style/edit_padding_10"
            android:completionThreshold="1"
            android:hint="@string/email_address"
            android:lines="1"
            android:drawablePadding="5dp"
            android:layout_margin="10dp"
            android:drawableLeft="@mipmap/ic_phone"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtPwd"
                style="@style/edit_padding_10"
                android:hint="@string/enter_the_validation_code"
                android:layout_margin="10dp"
                android:lines="1"
                android:drawablePadding="5dp"
                android:drawableLeft="@mipmap/ic_a"/>
            <com.slb.ttdandroidframework.weight.CountTimerButton
                android:id="@+id/BtnGetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/send_the_validation_code"
                android:textColor="#00A4EF"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/distance_20"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btnComfirm"
            style="@style/btn_bottom_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_30"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>
