<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2B3139"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:id="@+id/RlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3C444F"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/ck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checkbox_two"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/RlPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#3C444F"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change_Password"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/checkbox_two"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btnLogout"
        style="@style/btn_bottom_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_30"
        android:text="@string/Logout_Current_Account" />
</LinearLayout>