<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2B3139">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_3C444F">
            <TextView
                android:id="@+id/mTvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/read_dtcs"
                android:textSize="18sp"
                android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/mIvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
        <TextView
            android:id="@+id/mTvAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/Scan"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@mipmap/ic_refresh"
            android:drawablePadding="10dp"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#3C444F"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/TvConfirmErrorCodeNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
                <CheckBox
                    android:id="@+id/CheckboxConfirmErrorCode"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/checkbox_one"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/Rv01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone">
            </android.support.v7.widget.RecyclerView>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="#3C444F"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/TvWaitErrorCodeNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
                <CheckBox
                    android:id="@+id/CheckboxWaitErrorCode"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@drawable/checkbox_one"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/Rv02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:visibility="gone">
            </android.support.v7.widget.RecyclerView>
            <Button
                android:id="@+id/BtnClearError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/clear_dtcs"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
